Fix: list spacing slightly off

--- a/themes/cold-tavern/_lists.css
+++ b/themes/cold-tavern/_lists.css
@@ -4,5 +4,5 @@
 
 .content ul li,
 .content ol li {
-  margin: 0.9em 0;
+  margin: 0.8em 0;
 }
